<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="#E0D8CECC">

    <TextView
        android:layout_width="fill_parent"
        	 android:gravity="center" 
        
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/title" android:textColor="#000000"/>

    <Button
        android:id="@+id/launchScan"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:text="@string/button" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvInfo1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:visibility="invisible" 
                android:textColor="#000000"/>

            <LinearLayout
                android:id="@+id/llNomPrenom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tvNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="" 
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/tvPrenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDateNaissance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoBirth" 
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/tvDateNaissance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" 
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDateCertif"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validity" 
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/tvDateValidite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" 
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAptitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verdict"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvAptitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" 
                    android:textColor="#000000"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:visibility="invisible"
                    android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>